--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
 
 /* ===== RESET ===== */
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif;}
-body{background:#050505;color:#f5f5f5;overflow:hidden;cursor:none;}
+body{background:#060606;color:#f5f5f5;overflow-x:hidden;cursor:none;}
 canvas{position:fixed;inset:0;z-index:-1;}
 
 /* ===== CURSOR ===== */
 .cursor{
-  position:fixed;
-  width:12px;height:12px;
-  border:1px solid #fff;
-  border-radius:50%;
-  pointer-events:none;
+  position:fixed;width:10px;height:10px;
+  border:1px solid #fff;border-radius:50%;
+  pointer-events:none;z-index:1000;
   transform:translate(-50%,-50%);
-  z-index:1000;
   transition:.2s;
 }
 
@@ -54,21 +51,22 @@ nav span:hover{color:#fff;}
 
 /* ===== SECTIONS ===== */
 .section{
-  position:absolute;inset:0;
-  display:flex;flex-direction:column;
+  min-height:100vh;
+  display:flex;
   justify-content:center;
   align-items:center;
-  text-align:center;
-  opacity:0;
-  transition:1.2s cubic-bezier(.2,.7,.1,1);
+  padding:0 10%;
+  position:relative;
 }
 
-.section.active{opacity:1;}
+.content{
+  max-width:900px;
+}
 
 h1{
   font-size:clamp(60px,6vw,110px);
   font-weight:500;
-  letter-spacing:-0.02em;
+  line-height:1.05;
 }
 
 p{
@@ -79,48 +77,104 @@ p{
   line-height:1.6;
 }
 
-/* ===== FADE OVERLAY ===== */
-.overlay{
-  position:fixed;
-  inset:0;
-  background:#000;
+/* ===== REVEAL ===== */
+.reveal{
   opacity:0;
-  pointer-events:none;
-  transition:.8s ease;
-  z-index:50;
+  transform:translateY(80px);
+  transition:1.4s cubic-bezier(.2,.7,.1,1);
 }
 
-.overlay.active{opacity:1;}
+.reveal.visible{
+  opacity:1;
+  transform:translateY(0);
+}
+
+/* ===== PROJECTS ===== */
+.projects{
+  display:flex;
+  overflow:hidden;
+}
+
+.project{
+  min-width:100vw;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:50px;
+  transition:transform 1s cubic-bezier(.2,.7,.1,1);
+}
+
+.project img{
+  max-width:70%;
+  transition:transform 1.2s ease;
+}
+
+.project:hover img{
+  transform:scale(1.05);
+}
+
+/* ===== FOOTER ===== */
+footer{
+  text-align:center;
+  padding:80px 0;
+  font-size:12px;
+  letter-spacing:.2em;
+  color:#555;
+  border-top:1px solid #1c1c1c;
+}
 
 </style>
 </head>
 <body>
 
 <div class="cursor"></div>
-<div class="overlay"></div>
 
 <nav>
-  <span data-target="home">Home</span>
-  <span data-target="about">Studio</span>
-  <span data-target="contact">Contact</span>
+  <span data-scroll="0">Home</span>
+  <span data-scroll="1">Studio</span>
+  <span data-scroll="2">Projects</span>
+  <span data-scroll="3">Contact</span>
 </nav>
 
-<section id="home" class="section active">
-  <h1 id="title">Industrial Design</h1>
-  <p>Material intelligence meets architectural clarity.</p>
+<section class="section">
+  <div class="content">
+    <h1 id="heroTitle"></h1>
+    <p class="reveal">Material intelligence meets architectural clarity.</p>
+  </div>
 </section>
 
-<section id="about" class="section">
-  <h1>Minimal Architecture</h1>
-  <p>
-    We design products as spatial systems — controlled, silent and structural.
-  </p>
+<section class="section">
+  <div class="content">
+    <h1 class="reveal">Minimal Architecture</h1>
+    <p class="reveal">
+      Products designed as spatial systems — silent, precise and structural.
+    </p>
+  </div>
 </section>
 
-<section id="contact" class="section">
-  <h1>Contact</h1>
-  <p>majorbori@gmail.com</p>
+<section class="section projects">
+  <div class="project">
+    <h1>BAORI</h1>
+  </div>
+  <div class="project">
+    <h1>NODE</h1>
+  </div>
+  <div class="project">
+    <h1>LUMORA</h1>
+  </div>
 </section>
+
+<section class="section">
+  <div class="content">
+    <h1 class="reveal">Contact</h1>
+    <p class="reveal">majorbori@gmail.com</p>
+  </div>
+</section>
+
+<footer>
+MB STUDIO — INDUSTRIAL DESIGN
+</footer>
 
 <script>
 
@@ -132,94 +186,102 @@ document.addEventListener("mousemove",e=>{
   mx=e.clientX;my=e.clientY;
 });
 
-document.querySelectorAll("nav span").forEach(el=>{
-  el.addEventListener("mouseenter",()=>cursor.classList.add("expand"));
-  el.addEventListener("mouseleave",()=>cursor.classList.remove("expand"));
+function cursorLoop(){
+  sx+=(mx-sx)*0.08;
+  sy+=(my-sy)*0.08;
+  cursor.style.left=sx+"px";
+  cursor.style.top=sy+"px";
+  requestAnimationFrame(cursorLoop);
+}
+cursorLoop();
+
+/* ===== HERO TYPE ===== */
+const text="Industrial Design";
+const hero=document.getElementById("heroTitle");
+
+text.split("").forEach((char,i)=>{
+  const span=document.createElement("span");
+  span.textContent=char;
+  span.style.opacity="0";
+  span.style.display="inline-block";
+  span.style.transform="translateY(40px)";
+  span.style.transition=`all .6s ease ${i*0.03}s`;
+  hero.appendChild(span);
 });
 
-/* ===== THREE BACKGROUND ===== */
+setTimeout(()=>{
+  hero.querySelectorAll("span").forEach(s=>{
+    s.style.opacity="1";
+    s.style.transform="translateY(0)";
+  });
+},200);
 
+/* ===== SCROLL REVEAL ===== */
+const reveals=document.querySelectorAll(".reveal");
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("visible");
+    }
+  });
+},{threshold:0.2});
+reveals.forEach(el=>observer.observe(el));
+
+/* ===== THREE SUBTLE BACKGROUND ===== */
 let scene=new THREE.Scene();
 let camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,100);
 camera.position.z=4;
 
-let renderer=new THREE.WebGLRenderer({alpha:true,antialias:true});
+let renderer=new THREE.WebGLRenderer({alpha:true});
 renderer.setSize(window.innerWidth,window.innerHeight);
 renderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
 document.body.appendChild(renderer.domElement);
 
-/* Orbital geometry */
-let geometry=new THREE.IcosahedronGeometry(1.5,2);
-let material=new THREE.MeshStandardMaterial({
-  color:0xffffff,
+let geo=new THREE.IcosahedronGeometry(1.5,2);
+let mat=new THREE.MeshStandardMaterial({
   wireframe:true,
+  color:0xffffff,
   transparent:true,
-  opacity:0.08
+  opacity:0.06
 });
-let mesh=new THREE.Mesh(geometry,material);
+let mesh=new THREE.Mesh(geo,mat);
 scene.add(mesh);
 
 let light=new THREE.PointLight(0xffffff,1);
 light.position.set(5,5,5);
 scene.add(light);
 
-/* Audio reactive */
-let audioContext=new (window.AudioContext||window.webkitAudioContext)();
-let analyser=audioContext.createAnalyser();
-analyser.fftSize=64;
-
-navigator.mediaDevices.getUserMedia({audio:true}).then(stream=>{
-  let source=audioContext.createMediaStreamSource(stream);
-  source.connect(analyser);
-});
-
-/* Animate */
-let dataArray=new Uint8Array(analyser.frequencyBinCount);
-
 function animate(){
-  requestAnimationFrame(animate);
-
-  sx+=(mx-sx)*0.08;
-  sy+=(my-sy)*0.08;
-
-  cursor.style.left=sx+"px";
-  cursor.style.top=sy+"px";
-
-  analyser.getByteFrequencyData(dataArray);
-  let avg=dataArray.reduce((a,b)=>a+b)/dataArray.length;
-
-  mesh.rotation.x+=0.002+avg*0.00001;
-  mesh.rotation.y+=0.002+avg*0.00001;
-
+  mesh.rotation.x+=0.0015;
+  mesh.rotation.y+=0.0015;
   renderer.render(scene,camera);
+  requestAnimationFrame(animate);
 }
 animate();
 
-/* Resize */
 window.addEventListener("resize",()=>{
   renderer.setSize(window.innerWidth,window.innerHeight);
   camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
 });
 
-/* ===== TRANSITIONS ===== */
-const overlay=document.querySelector(".overlay");
-const sections=document.querySelectorAll(".section");
-
+/* ===== NAV SCROLL ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
-    const target=document.getElementById(btn.dataset.target);
-    const current=document.querySelector(".section.active");
-    if(target===current) return;
-
-    overlay.classList.add("active");
-
-    setTimeout(()=>{
-      current.classList.remove("active");
-      target.classList.add("active");
-      overlay.classList.remove("active");
-    },800);
+    const index=btn.dataset.scroll;
+    document.querySelectorAll(".section")[index]
+      .scrollIntoView({behavior:"smooth"});
   });
+});
+
+/* ===== PROJECT HORIZONTAL SCROLL ===== */
+const projectSection=document.querySelector(".projects");
+
+window.addEventListener("scroll",()=>{
+  const rect=projectSection.getBoundingClientRect();
+  if(rect.top<=0 && rect.bottom>=window.innerHeight){
+    projectSection.scrollLeft=window.scrollY - projectSection.offsetTop;
+  }
 });
 
 </script>
