--- a/index.html
+++ b/index.html
@@ -10,26 +10,53 @@
 
 <style>
 
-/* ===== RESET ===== */
+/* ================= RESET ================= */
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif;}
-body{background:#060606;color:#f5f5f5;overflow-x:hidden;cursor:none;}
+body{background:#0a0a0a;color:#f5f5f5;overflow-x:hidden;cursor:none;}
 canvas{position:fixed;inset:0;z-index:-1;}
 
-/* ===== CURSOR ===== */
+/* ================= LOADER ================= */
+.loader{
+  position:fixed;
+  inset:0;
+  background:#0a0a0a;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:2000;
+  transition:1.2s ease;
+}
+
+.loader.fade{
+  opacity:0;
+  pointer-events:none;
+}
+
+.loader span{
+  font-size:14px;
+  letter-spacing:.3em;
+  text-transform:uppercase;
+  color:#777;
+}
+
+/* ================= CURSOR ================= */
 .cursor{
-  position:fixed;width:10px;height:10px;
-  border:1px solid #fff;border-radius:50%;
-  pointer-events:none;z-index:1000;
+  position:fixed;
+  width:8px;height:8px;
+  border:1px solid #fff;
+  border-radius:50%;
+  pointer-events:none;
   transform:translate(-50%,-50%);
+  z-index:1000;
   transition:.2s;
 }
 
 .cursor.expand{
-  transform:translate(-50%,-50%) scale(2);
+  transform:translate(-50%,-50%) scale(3);
   background:#fff;
 }
 
-/* ===== NAV ===== */
+/* ================= NAV ================= */
 nav{
   position:fixed;
   top:40px;left:50%;
@@ -49,7 +76,7 @@ nav span{
 
 nav span:hover{color:#fff;}
 
-/* ===== SECTIONS ===== */
+/* ================= SECTIONS ================= */
 .section{
   min-height:100vh;
   display:flex;
@@ -59,12 +86,10 @@ nav span:hover{color:#fff;}
   position:relative;
 }
 
-.content{
-  max-width:900px;
-}
+.content{max-width:900px;}
 
 h1{
-  font-size:clamp(60px,6vw,110px);
+  font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
@@ -77,7 +102,7 @@ p{
   line-height:1.6;
 }
 
-/* ===== REVEAL ===== */
+/* ================= REVEAL ================= */
 .reveal{
   opacity:0;
   transform:translateY(80px);
@@ -89,10 +114,11 @@ p{
   transform:translateY(0);
 }
 
-/* ===== PROJECTS ===== */
+/* ================= PROJECTS ================= */
 .projects{
   display:flex;
   overflow:hidden;
+  position:relative;
 }
 
 .project{
@@ -101,23 +127,27 @@ p{
   display:flex;
   justify-content:center;
   align-items:center;
-  font-size:50px;
-  transition:transform 1s cubic-bezier(.2,.7,.1,1);
+  font-size:60px;
+  position:relative;
 }
 
-.project img{
-  max-width:70%;
-  transition:transform 1.2s ease;
+.project::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(to bottom,transparent,#0a0a0a);
+  opacity:.4;
 }
 
-.project:hover img{
-  transform:scale(1.05);
+.project h2{
+  position:relative;
+  z-index:10;
 }
 
-/* ===== FOOTER ===== */
+/* ================= FOOTER ================= */
 footer{
   text-align:center;
-  padding:80px 0;
+  padding:100px 0;
   font-size:12px;
   letter-spacing:.2em;
   color:#555;
@@ -128,6 +158,7 @@ footer{
 </head>
 <body>
 
+<div class="loader"><span>MB STUDIO</span></div>
 <div class="cursor"></div>
 
 <nav>
@@ -146,23 +177,17 @@ footer{
 
 <section class="section">
   <div class="content">
-    <h1 class="reveal">Minimal Architecture</h1>
+    <h1 class="reveal">Spatial Systems</h1>
     <p class="reveal">
-      Products designed as spatial systems — silent, precise and structural.
+      Products conceived as controlled volumes, precise in proportion and silent in expression.
     </p>
   </div>
 </section>
 
 <section class="section projects">
-  <div class="project">
-    <h1>BAORI</h1>
-  </div>
-  <div class="project">
-    <h1>NODE</h1>
-  </div>
-  <div class="project">
-    <h1>LUMORA</h1>
-  </div>
+  <div class="project"><h2>BAORI</h2></div>
+  <div class="project"><h2>NODE</h2></div>
+  <div class="project"><h2>LUMORA</h2></div>
 </section>
 
 <section class="section">
@@ -177,6 +202,13 @@ MB STUDIO — INDUSTRIAL DESIGN
 </footer>
 
 <script>
+
+/* ===== LOADER ===== */
+window.addEventListener("load",()=>{
+  setTimeout(()=>{
+    document.querySelector(".loader").classList.add("fade");
+  },1000);
+});
 
 /* ===== CURSOR ===== */
 const cursor=document.querySelector(".cursor");
@@ -204,8 +236,8 @@ text.split("").forEach((char,i)=>{
   span.textContent=char;
   span.style.opacity="0";
   span.style.display="inline-block";
-  span.style.transform="translateY(40px)";
-  span.style.transition=`all .6s ease ${i*0.03}s`;
+  span.style.transform="translateY(50px)";
+  span.style.transition=`all .6s ease ${i*0.04}s`;
   hero.appendChild(span);
 });
 
@@ -214,7 +246,7 @@ setTimeout(()=>{
     s.style.opacity="1";
     s.style.transform="translateY(0)";
   });
-},200);
+},300);
 
 /* ===== SCROLL REVEAL ===== */
 const reveals=document.querySelectorAll(".reveal");
@@ -227,7 +259,7 @@ const observer=new IntersectionObserver(entries=>{
 },{threshold:0.2});
 reveals.forEach(el=>observer.observe(el));
 
-/* ===== THREE SUBTLE BACKGROUND ===== */
+/* ===== THREE BACKGROUND ===== */
 let scene=new THREE.Scene();
 let camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,100);
 camera.position.z=4;
@@ -237,12 +269,12 @@ renderer.setSize(window.innerWidth,window.innerHeight);
 renderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
 document.body.appendChild(renderer.domElement);
 
-let geo=new THREE.IcosahedronGeometry(1.5,2);
+let geo=new THREE.IcosahedronGeometry(1.8,2);
 let mat=new THREE.MeshStandardMaterial({
   wireframe:true,
   color:0xffffff,
   transparent:true,
-  opacity:0.06
+  opacity:0.05
 });
 let mesh=new THREE.Mesh(geo,mat);
 scene.add(mesh);
@@ -272,16 +304,6 @@ document.querySelectorAll("nav span").forEach(btn=>{
     document.querySelectorAll(".section")[index]
       .scrollIntoView({behavior:"smooth"});
   });
-});
-
-/* ===== PROJECT HORIZONTAL SCROLL ===== */
-const projectSection=document.querySelector(".projects");
-
-window.addEventListener("scroll",()=>{
-  const rect=projectSection.getBoundingClientRect();
-  if(rect.top<=0 && rect.bottom>=window.innerHeight){
-    projectSection.scrollLeft=window.scrollY - projectSection.offsetTop;
-  }
 });
 
 </script>
