--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MB Studio — Gold Edition</title>
+<title>MB Studio — Winner Potential</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
@@ -34,7 +34,6 @@ canvas{position:fixed;inset:0;z-index:-1;}
   border:1px solid #fff;border-radius:50%;
   pointer-events:none;z-index:1000;
   transform:translate(-50%,-50%);
-  transition:.2s;
 }
 
 nav{
@@ -74,7 +73,7 @@ p{
   line-height:1.6;
 }
 
-/* Projects Horizontal */
+/* ===== Projects ===== */
 .projects{
   position:relative;
   height:100vh;
@@ -91,7 +90,26 @@ p{
   display:flex;
   justify-content:center;
   align-items:center;
+  position:relative;
+}
+
+.project img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  opacity:0.7;
+  transition:opacity .6s ease, transform 1s ease;
+}
+
+.project.active img{
+  opacity:1;
+  transform:scale(1.05);
+}
+
+.project h2{
+  position:absolute;
   font-size:60px;
+  z-index:10;
 }
 
 footer{
@@ -135,9 +153,18 @@ footer{
 
 <section class="projects">
   <div class="projects-wrapper">
-    <div class="project">BAORI</div>
-    <div class="project">NODE</div>
-    <div class="project">LUMORA</div>
+    <div class="project active">
+      <img src="https://picsum.photos/1920/1080?random=1">
+      <h2>BAORI</h2>
+    </div>
+    <div class="project">
+      <img src="https://picsum.photos/1920/1080?random=2">
+      <h2>NODE</h2>
+    </div>
+    <div class="project">
+      <img src="https://picsum.photos/1920/1080?random=3">
+      <h2>LUMORA</h2>
+    </div>
   </div>
 </section>
 
@@ -193,7 +220,7 @@ let mat=new THREE.MeshStandardMaterial({
   wireframe:true,
   color:0xffffff,
   transparent:true,
-  opacity:0.05
+  opacity:0.04
 });
 let mesh=new THREE.Mesh(geo,mat);
 scene.add(mesh);
@@ -203,33 +230,21 @@ light.position.set(5,5,5);
 scene.add(light);
 
 function animate(){
-  mesh.rotation.x+=0.0015;
-  mesh.rotation.y+=0.0015;
+  mesh.rotation.x+=0.001;
+  mesh.rotation.y+=0.001;
   renderer.render(scene,camera);
   requestAnimationFrame(animate);
 }
 animate();
 
-/* ===== GSAP SCROLL ===== */
+/* ===== GSAP ===== */
 gsap.registerPlugin(ScrollTrigger);
 
-/* Hero Fade In */
 gsap.from(".hero-title",{
   y:100,
   opacity:0,
   duration:1.4,
   ease:"power3.out"
-});
-
-/* Studio Reveal */
-gsap.from(".studio h1",{
-  scrollTrigger:{
-    trigger:".studio",
-    start:"top 80%"
-  },
-  y:100,
-  opacity:0,
-  duration:1.2
 });
 
 /* Horizontal Projects */
@@ -243,19 +258,13 @@ gsap.to(sections,{
     pin:true,
     scrub:1,
     snap:1/(sections.length-1),
-    end:()=>"+=" + document.querySelector(".projects-wrapper").offsetWidth
+    end:()=>"+=" + document.querySelector(".projects-wrapper").offsetWidth,
+    onUpdate:(self)=>{
+      let index=Math.round(self.progress*(sections.length-1));
+      sections.forEach(s=>s.classList.remove("active"));
+      sections[index].classList.add("active");
+    }
   }
-});
-
-/* Contact Reveal */
-gsap.from(".contact h1",{
-  scrollTrigger:{
-    trigger:".contact",
-    start:"top 80%"
-  },
-  y:100,
-  opacity:0,
-  duration:1.2
 });
 
 /* Nav Scroll */
